--- a/tiptweet-elsa/package.json
+++ b/tiptweet-elsa/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@apollo/client": "^3.7.0",
+    "@apollo/react-testing": "^4.0.0",
     "@emotion/styled": "^11.10.5",
     "@reduxjs/toolkit": "^1.8.6",
     "@testing-library/jest-dom": "^5.16.5",
